--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,8 @@
 <div th:fragment="footer">
     <script type = "text/javascript" src="/js/jquery-3.3.1.slim.min.js"></script>
     <script type = "text/javascript" src="/js/popper.min.js"></script>
-    <script type = "text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type = "text/javascript" src="/js/bootstrap.js"></script>
+    <script type = "text/javascript" src="/js/bootstrap.bundle.js"></script>
     <script type = "text/javascript" src="/js/polyfiller.js"></script>
     <script type = "text/javascript" src="/js/bootstrap-datepicker.js"></script>
 </div>
