--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <div th:fragment="footer">
-    <script type = "text/javascript" src="/js/jquery-3.3.1.slim.min.js"></script>
-    <script type = "text/javascript" src="/js/popper.min.js"></script>
-    <script type = "text/javascript" src="/js/bootstrap.js"></script>
-    <script type = "text/javascript" src="/js/bootstrap.bundle.js"></script>
-    <script type = "text/javascript" src="/js/polyfiller.js"></script>
-    <script type = "text/javascript" src="/js/bootstrap-datepicker.js"></script>
+    <script type="text/javascript" src="webjars/bootstrap/5.2.3/js/bootstrap.bundle.js"></script>
 </div>
 </html>
