--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <link rel="stylesheet" th:href="@{/css/bootstrap-datepicker.css}">
+    <link th:href="@{webjars/bootstrap/5.2.3/css/bootstrap.css}" rel="stylesheet"/>
     <title>Запросы</title>
 </head>
 </html>
