--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,8 +20,9 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
+                       data-bs-toggle="dropdown"
+                       aria-expanded="false"
+                       aria-haspopup="true">
                         Фильтр <span class="badge badge-secondary"
                                      th:if="${filter.isEnabled()}"
                                      th:text="${requests.getTotalElements()<100 ? requests.getTotalElements() : '99+'}"
